Improve shared UI elements